--- a/Pages/LoginPage.xaml
+++ b/Pages/LoginPage.xaml
@@ -8,6 +8,7 @@
     mc:Ignorable="d"
     Background="{ThemeResource SystemControlBackgroundAltHighBrush}">
 
+    <!--
     <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
         <Grid>
             <Image x:Name="QRImage"/>
@@ -15,4 +16,124 @@
         </Grid>
         <TextBlock x:Uid="App/Pages/LoginPage/ScanQRCodeToLogin"/>
     </StackPanel>
+    -->
+    <Grid MaxWidth="300"
+          HorizontalAlignment="Center"
+          VerticalAlignment="Center"
+          Margin="10,30">
+        <Grid x:Name="LoginMethodSelectionPane">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <TextBlock x:Uid="App/Pages/LoginPage/ChooseLoginMethod"
+                   Grid.Row="0"
+                   HorizontalAlignment="Center"
+                   Margin="0,0,0,5"/>
+            <ListView x:Name="LoginMethodsList"
+                  Grid.Row="1"
+                  SelectionMode="None"
+                  IsItemClickEnabled="True"
+                  ItemClick="LoginMethodsList_ItemClick">
+                <ListView.ItemContainerStyle>
+                    <Style TargetType="ListViewItem">
+                        <!--
+                        <Setter Property="MinHeight" Value="0"/>
+                        -->
+                        <Setter Property="HorizontalContentAlignment"
+                                Value="Stretch"/>
+                    </Style>
+                </ListView.ItemContainerStyle>
+                <Grid x:Name="QRLoginItem" MinHeight="30">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock x:Uid="App/Pages/LoginPage/QRCodeLogin"
+                           Grid.Column="0"
+                           VerticalAlignment="Center"
+                           TextLineBounds="Tight"/>
+                    <TextBlock Grid.Column="1"
+                           Padding="30,0,0,0"
+                           FontFamily="Segoe MDL2 Assets"
+                           Text="&#xE00F;"
+                           VerticalAlignment="Center"
+                           HorizontalAlignment="Right"/>
+                </Grid>
+                <Grid x:Name="TokenLoginItem" MinHeight="30">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock x:Uid="App/Pages/LoginPage/TokenLogin"
+                           Grid.Column="0"
+                           VerticalAlignment="Center"
+                           TextLineBounds="Tight"/>
+                    <TextBlock Grid.Column="1"
+                           Padding="30,0,0,0"
+                           FontFamily="Segoe MDL2 Assets"
+                           Text="&#xE00F;"
+                           VerticalAlignment="Center"
+                           HorizontalAlignment="Right"/>
+                </Grid>
+            </ListView>
+        </Grid>
+        <Grid x:Name="QRCodeLoginPane" Visibility="Collapsed">
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <Image x:Name="QRCodeImage" Grid.Row="0"/>
+            <ProgressRing x:Name="QRCodeProgRing"
+                          Grid.Row="0"
+                          Width="50" Height="50"
+                          Padding="10"/>
+            <Button x:Uid="App/XCommon/Reload"
+                    HorizontalAlignment="Center"
+                    Click="QRCodeReload_Click"/>
+            <TextBlock x:Uid="App/Pages/LoginPage/ScanQRCodeToLogin"
+                       Grid.Row="1"
+                       Padding="0,10"/>
+            <Button x:Uid="App/XCommon/Cancel"
+                    Grid.Row="2"
+                    HorizontalAlignment="Center"
+                    Click="ButtonClick_ReturnToMethodsList"/>
+        </Grid>
+        <StackPanel x:Name="TokenLoginPane" Visibility="Collapsed">
+            <TextBlock Foreground="Red"
+                       x:Uid="App/Pages/LoginPage/TokenLoginWarn"
+                       TextWrapping="WrapWholeWords"/>
+            <TextBox x:Name="TokenLogin_AccessToken"
+                     Header="access_token"/>
+            <TextBox x:Name="TokenLogin_RefreshToken"
+                     Header="refresh_token"/>
+            <TextBox x:Name="TokenLogin_Cookies_SESSDATA"
+                     Header="cookies.SESSDATA"/>
+            <TextBox x:Name="TokenLogin_Cookies_bili_jct"
+                     Header="cookies.bili_jct"/>
+            <TextBox x:Name="TokenLogin_Cookies_DedeUserID"
+                     Header="cookies.DedeUserID"/>
+            <TextBox x:Name="TokenLogin_Cookies_DedeUserID__ckMd5"
+                     Header="cookies.DedeUserID__ckMd5"/>
+            <TextBox x:Name="TokenLogin_Cookies_sid"
+                     Header="cookies.sid"/>
+            <Grid Margin="0,10,0,0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Button x:Uid="App/XCommon/Login"
+                        Grid.Column="0"
+                        Margin="0,0,5,0"
+                        HorizontalAlignment="Stretch"
+                        Click="TokenLogin_Click"/>
+                <Button x:Uid="App/XCommon/Cancel"
+                        Grid.Column="1"
+                        Margin="5,0,0,0"
+                        HorizontalAlignment="Stretch"
+                        Click="ButtonClick_ReturnToMethodsList"/>
+            </Grid>
+        </StackPanel>
+    </Grid>
 </Page>
