--- a/Pages/LoginPage.xaml
+++ b/Pages/LoginPage.xaml
@@ -80,7 +80,7 @@
         </Grid>
         <Grid x:Name="QRCodeLoginPane" Visibility="Collapsed">
             <Grid.RowDefinitions>
-                <RowDefinition/>
+                <RowDefinition Height="Auto"/>
                 <RowDefinition/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
@@ -89,11 +89,37 @@
                           Grid.Row="0"
                           Width="50" Height="50"
                           Padding="10"/>
-            <Button x:Uid="App/XCommon/Reload"
-                    HorizontalAlignment="Center"
-                    Click="QRCodeReload_Click"/>
+            <Grid x:Name="QRCodeReload"
+                  Grid.Row="0"
+                  Background="#eeffffff"
+                  VerticalAlignment="Stretch"
+                  Visibility="Collapsed">
+                <StackPanel VerticalAlignment="Center">
+                    <TextBlock x:Uid="App/Pages/LoginPage/QRCodeExpired"
+                               HorizontalAlignment="Center"
+                               Padding="0,0,0,10"/>
+                    <Button x:Uid="App/XCommon/Reload"
+                            HorizontalAlignment="Center"
+                            Click="QRCodeReloadButton_Click"/>
+                </StackPanel>
+            </Grid>
+            <Grid x:Name="QRCodeFailed"
+                  Grid.Row="0"
+                  Background="#eeffffff"
+                  VerticalAlignment="Stretch"
+                  Visibility="Collapsed">
+                <StackPanel VerticalAlignment="Center">
+                    <TextBlock x:Uid="App/Pages/LoginPage/QRCodeFailed"
+                               HorizontalAlignment="Center"
+                               Padding="0,0,0,10"/>
+                    <Button x:Uid="App/XCommon/Reload"
+                            HorizontalAlignment="Center"
+                            Click="QRCodeReloadButton_Click"/>
+                </StackPanel>
+            </Grid>
             <TextBlock x:Uid="App/Pages/LoginPage/ScanQRCodeToLogin"
                        Grid.Row="1"
+                       HorizontalAlignment="Center"
                        Padding="0,10"/>
             <Button x:Uid="App/XCommon/Cancel"
                     Grid.Row="2"
