--- a/Pages/SettingsPage.xaml
+++ b/Pages/SettingsPage.xaml
@@ -38,10 +38,11 @@
                 <TextBlock Style="{StaticResource ItemTextBlockStyle}">选项内容</TextBlock>
                 <TextBlock x:Uid="App/Page/SettingsPage/Misc" Style="{StaticResource RegionHeaderTextBlockStyle}"/>
                 <ToggleSwitch x:Uid="App/Page/SettingsPage/App_PersistClipboardAfterExit" Style="{StaticResource ItemToggleSwitchStyle}" IsOn="{x:Bind CfgModel.App_PersistClipboardAfterExit,Mode=TwoWay}"/>
-                <StackPanel x:Name="DeveloperPane" x:Load="{x:Bind CfgModel.App_IsDeveloper,Mode=OneWay}">
+                <StackPanel x:Name="DeveloperPane" Visibility="{x:Bind CfgModel.App_IsDeveloper,Mode=OneWay}">
                     <TextBlock x:Uid="App/Page/SettingsPage/Dev" Style="{StaticResource RegionHeaderTextBlockStyle}"/>
-                    <ToggleSwitch x:Uid="App/Page/SettingsPage/Dev_IsDeveloper" Style="{StaticResource ItemToggleSwitchStyle}" IsOn="{x:Bind CfgModel.App_IsDeveloper,Mode=TwoWay}"/>
-                    <TextBlock x:Uid="App/Page/SettingsPage/Dev_Storage" Style="{StaticResource GroupHeaderTextBlockStyle}"/>
+                    <ToggleSwitch x:Uid="App/Page/SettingsPage/App_IsDeveloper" Style="{StaticResource ItemToggleSwitchStyle}" IsOn="{x:Bind CfgModel.App_IsDeveloper,Mode=TwoWay}"/>
+                    <ToggleSwitch x:Uid="App/Page/SettingsPage/App_RedactLogs" Style="{StaticResource ItemToggleSwitchStyle}" IsOn="{x:Bind CfgModel.App_RedactLogs,Mode=TwoWay}"/>
+                    <TextBlock x:Uid="App/Page/SettingsPage/App_Storage" Style="{StaticResource GroupHeaderTextBlockStyle}"/>
                     <Button x:Uid="App/Page/SettingsPage/OpenStorageFolderButton" x:Name="OpenStorageFolderButton" Click="OpenStorageFolderButton_Click" Style="{StaticResource ItemButtonStyle}"/>
                 </StackPanel>
                 <TextBlock x:Uid="App/Page/SettingsPage/About" Style="{StaticResource RegionHeaderTextBlockStyle}"/>
