--- a/Pages/FavouritesUserPage.xaml
+++ b/Pages/FavouritesUserPage.xaml
@@ -43,12 +43,55 @@
                 </AppBarButton>
             </CommandBar>
         </Grid>
-        <!--TODO: Use SymbolThemeFontFamily-->
         <Grid x:Name="ItemsPane" Grid.Row="1">
             <local:AdaptiveGridView x:Name="ItemsGridView"
+                                    ItemsSource="{x:Bind ViewItemSource}"
                                     Background="{ThemeResource SystemControlBackgroundChromeMediumLowBrush}"
-                                    DesiredWidth="300">
-                
+                                    SelectionMode="None"
+                                    IsItemClickEnabled="True"
+                                    DesiredWidth="350"
+                                    ItemHeight="90">
+                <local:AdaptiveGridView.ItemContainerStyle>
+                    <Style TargetType="GridViewItem">
+                        <Setter Property="Margin" Value="3"/>
+                    </Style>
+                </local:AdaptiveGridView.ItemContainerStyle>
+                <local:AdaptiveGridView.ItemTemplate>
+                    <DataTemplate x:DataType="local:FavouriteUserViewPage_ViewItem">
+                        <Grid Background="{ThemeResource SystemControlBackgroundAltHighBrush}" Padding="5">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <Image Grid.Column="0" Margin="0,0,10,0" Stretch="Uniform">
+                                <Image.Source>
+                                    <BitmapImage UriSource="{x:Bind Path=CoverUrl,Converter={StaticResource StrToUri}}"/>
+                                </Image.Source>
+                            </Image>
+                            <Grid Grid.Column="1">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="*"/>
+                                    <RowDefinition Height="*"/>
+                                    <RowDefinition Height="*"/>
+                                </Grid.RowDefinitions>
+                                <TextBlock Grid.Row="0" Text="{x:Bind Title}" TextTrimming="CharacterEllipsis" TextLineBounds="Tight" VerticalAlignment="Center"/>
+                                <TextBlock Grid.Row="1" Text="{x:Bind AttrStr}" TextLineBounds="Tight" VerticalAlignment="Center"/>
+                                <StackPanel Grid.Row="2" Orientation="Horizontal">
+                                    <TextBlock FontFamily="{ThemeResource SymbolThemeFontFamily}" Text="&#xEA69;  " FontSize="12" VerticalAlignment="Center" TextLineBounds="Tight"/>
+                                    <TextBlock Text="{x:Bind MediaCount}" TextLineBounds="Tight" VerticalAlignment="Center"/>
+                                </StackPanel>
+                            </Grid>
+                        </Grid>
+                    </DataTemplate>
+                </local:AdaptiveGridView.ItemTemplate>
+                <local:AdaptiveGridView.Footer>
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,0">
+                        <ProgressRing x:Name="BottomProgRing" Width="20" Height="20" IsActive="False" Visibility="Collapsed" Margin="0,0,10,0"/>
+                        <Grid Height="20">
+                            <TextBlock x:Name="BottomInfoText" Foreground="Gray" TextLineBounds="Tight" VerticalAlignment="Center"/>
+                        </Grid>
+                    </StackPanel>
+                </local:AdaptiveGridView.Footer>
             </local:AdaptiveGridView>
         </Grid>
     </Grid>
