--- a/Pages/FavouritesFolderPage.xaml
+++ b/Pages/FavouritesFolderPage.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="BiliUWP.FavouritesUserPage"
+    x:Class="BiliUWP.FavouritesFolderPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:BiliUWP"
@@ -63,7 +63,7 @@
                     </Style>
                 </local:AdaptiveGridView.ItemContainerStyle>
                 <local:AdaptiveGridView.ItemTemplate>
-                    <DataTemplate x:DataType="local:FavouritesUserPage_ViewItem">
+                    <DataTemplate x:DataType="local:FavouritesFolderPage_ViewItem">
                         <Grid Background="{ThemeResource SystemControlBackgroundAltHighBrush}" Padding="5">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto"/>
@@ -81,10 +81,31 @@
                                     <RowDefinition Height="*"/>
                                 </Grid.RowDefinitions>
                                 <TextBlock Grid.Row="0" Text="{x:Bind Title}" TextTrimming="CharacterEllipsis" TextLineBounds="Tight" VerticalAlignment="Center"/>
-                                <TextBlock Grid.Row="1" Text="{x:Bind AttrStr}" TextLineBounds="Tight" VerticalAlignment="Center"/>
-                                <StackPanel Grid.Row="2" Orientation="Horizontal">
-                                    <TextBlock FontFamily="{ThemeResource SymbolThemeFontFamily}" Text="&#xEA69;  " FontSize="12" VerticalAlignment="Center" TextLineBounds="Tight"/>
-                                    <TextBlock Text="{x:Bind MediaCount}" TextLineBounds="Tight" VerticalAlignment="Center"/>
+                                <StackPanel Grid.Row="1" Orientation="Horizontal">
+                                    <!--
+                                    <PersonPicture Width="Auto" Height="Auto" Margin="0,2,6,2" ProfilePicture="{x:Bind UpFaceUrl}"/>
+                                    -->
+                                    <!-- TODO: Use custom control to implement profile image -->
+                                    <Ellipse Height="22" Width="22" Margin="0,0,6,0" Stroke="{ThemeResource SystemBaseMediumColor}" StrokeThickness="0.3">
+                                        <Ellipse.Fill>
+                                            <ImageBrush>
+                                                <ImageBrush.ImageSource>
+                                                    <BitmapImage UriSource="{x:Bind UpFaceUrl}" DecodePixelType="Logical" DecodePixelWidth="22" DecodePixelHeight="22" AutoPlay="False"/>
+                                                </ImageBrush.ImageSource>
+                                            </ImageBrush>
+                                        </Ellipse.Fill>
+                                    </Ellipse>
+                                    <TextBlock Text="{x:Bind UpName}" TextLineBounds="Tight" VerticalAlignment="Center"/>
+                                </StackPanel>
+                                <StackPanel Grid.Row="2" Orientation="Horizontal" Spacing="20">
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock FontFamily="{ThemeResource SymbolThemeFontFamily}" Text="&#xE768; " FontSize="12" Margin="0,0,0,1" VerticalAlignment="Center" TextLineBounds="Tight"/>
+                                        <TextBlock Text="{x:Bind PlayCount}" TextLineBounds="Tight" VerticalAlignment="Center"/>
+                                    </StackPanel>
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock FontFamily="{ThemeResource SymbolThemeFontFamily}" Text="&#xEA55;  " FontSize="12" VerticalAlignment="Center" TextLineBounds="Tight"/>
+                                        <TextBlock Text="{x:Bind DanmakuCount}" TextLineBounds="Tight" VerticalAlignment="Center"/>
+                                    </StackPanel>
                                 </StackPanel>
                             </Grid>
                         </Grid>
