--- a/Pages/SettingsPage.xaml
+++ b/Pages/SettingsPage.xaml
@@ -35,6 +35,9 @@
             <Setter Target="MinWidth" Value="150"/>
             <Setter Property="Margin" Value="0,2"/>
         </Style>
+        <Style TargetType="Slider" x:Key="ItemSliderStyle" BasedOn="{StaticResource DefaultSliderStyle}">
+            <Setter Property="Margin" Value="0,4,0,0"/>
+        </Style>
         <Style TargetType="HyperlinkButton" x:Key="TightHyperlinkButtonStyle">
             <Setter Property="Padding" Value="0"/>
         </Style>
@@ -54,15 +57,22 @@
             <Setter Property="Margin" Value="{StaticResource InlineItemMargin}"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
         </Style>
+
+        <x:Double x:Key="Double_100">100</x:Double>
     </Page.Resources>
-    
+
     <Grid Padding="12,0,0,0">
         <ScrollViewer IsScrollInertiaEnabled="True"
                       VerticalScrollBarVisibility="Auto">
             <StackPanel Padding="0,0,0,6">
+                <!-- TODO: Remove these lines
                 <TextBlock Style="{StaticResource RegionHeaderTextBlockStyle}">选项区域</TextBlock>
                 <TextBlock Style="{StaticResource GroupHeaderTextBlockStyle}">选项组</TextBlock>
                 <TextBlock Style="{StaticResource ItemTextBlockStyle}">选项内容</TextBlock>
+                -->
+                <TextBlock x:Uid="App/Page/SettingsPage/Playing" Style="{StaticResource RegionHeaderTextBlockStyle}"/>
+                <Slider x:Uid="App/Page/SettingsPage/App_GlobalVolume" Width="200" HorizontalAlignment="Left" Minimum="0" Maximum="100" StepFrequency="0.01" Style="{StaticResource ItemSliderStyle}" Value="{x:Bind CfgModel.App_GlobalVolume,Converter={StaticResource NumberScaleConverter},ConverterParameter=0.01,Mode=TwoWay}"/>
+                <ToggleSwitch x:Uid="App/Page/SettingsPage/App_AlwaysSyncPlayingCfg" Style="{StaticResource ItemToggleSwitchStyle}" IsOn="{x:Bind CfgModel.App_AlwaysSyncPlayingCfg,Mode=TwoWay}"/>
                 <TextBlock x:Uid="App/Page/SettingsPage/Misc" Style="{StaticResource RegionHeaderTextBlockStyle}"/>
                 <ToggleSwitch x:Uid="App/Page/SettingsPage/App_PersistClipboardAfterExit" Style="{StaticResource ItemToggleSwitchStyle}" IsOn="{x:Bind CfgModel.App_PersistClipboardAfterExit,Mode=TwoWay}"/>
                 <StackPanel x:Name="DeveloperPane" Visibility="{x:Bind CfgModel.App_IsDeveloper,Mode=OneWay}">
